Added Image upload helper

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -40,3 +40,4 @@ security:
         - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
+    access_denied_url: /
