Verification of email done

--- a/.env
+++ b/.env
@@ -29,6 +29,7 @@ DATABASE_URL=mysql://zooyade_aba:W2dS&IOQN=LU@127.0.0.1:3306/zooyade_cpool
 
 ###> symfony/swiftmailer-bundle ###
 # For Gmail as a transport, use: "gmail://username:password@localhost"
+#MAILER_URL=gmail://ashu.felix2005:aVHb08bwlNfPR8DlGuKG@localhost?encryption=tls&auth_mode=oauth
 # For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
 # Delivery is disabled by default via "null://localhost"
 #MAILER_URL=null://localhost
